[B]Advanced Emulator Launcher | version 0.9.2 | xx March 2017[/B]

FEATURE  Ability to sort cataloged filters by number of machines.

FEATURE  New Main Filter "Machines with no ROMs".

FIX      Use SORT_METHOD_LABEL_IGNORE_FOLDERS insead of SORT_METHOD_LABEL. This avoids folders
         to be rendered first when sorting listitems alpahbetically.

WIP      Scan Software Lists.

WIP      Launch machines with software lists.

WIP      On filter `Machines by Software List`, substitute raw Software List name by the proper 
         SL name.
         
WIP      Allow user to choose default assets as AEL does.

WIP      MAME and Software Lists Favourites.

WIP      Display MAMEINFO.DAT in Machine context menu.

WIP      Display HISTORY.DAT in Machine context menu.


[B]Advanced Emulator Launcher | version 0.9.1 | 04 February 2017[/B]

FEATURE  AML only works on Krypton now. Updated addon.xml with new fields.

FEATURE  Add support for nplayers.ini.

FEATURE  Count machines in "Extract MAME.xml" step and not in "Build MAME database" step.

FEATURE  Print the number of clones each machine has. In general, print the number of items
         on a submenu.

FEATURE  Add catalog by Devices. This will help launching software list machines.

FEATURE  In a parent list, if there is not clones, then add the ability to launch games from the
         parent list. Only coded for indexed machines and not for cataloged machines.
         See http://forums.bannister.org/ubbthreads.php?ubb=showflat&Number=108507#Post108507

FEATURE  Switch in settings to diplay Working machines only.
         See http://forum.kodi.tv/showthread.php?tid=304186&pid=2506150#pid2506150

FEATURE  Improved categories in "Machines by Control Type catalog".

FIX      "I get an error whenever trying to open any "Ball & Paddle" category. I'm pretty sure this 
         is due to the ampersand, because all the other categories I've tried work. This issue doesn't 